Basemap Changed to Lighter

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		 <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 	<body>
 		<div class = "header">
-			<h1>Nation-Wide CT Installation Sites</h1>
+			<h1>Scanner Installations with UW CT Protocols</h1>
 		</div>
 		 <div id="map"></div>
 		 <div id="panel"></div>
 		 <div id="textpanel"></div>
 			<div class="text" align="left" font face="Vollkorn">
 				</p>
-				<p> This map depicts GE CT installations nationwide.<br><br>Data obtained from the Department of Radiology.	
+				<p> This map depicts locations of 456 GE scanners installed through March 2016.<br><br>Data obtained from the Department of Radiology.	
 			</div>      
 		<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
